tests/init_state/cfg_shape/init_across_cfg_shapes_violations.err.expected
error: at 37:5: [INIT-UseBeforeInit] In function 'branch_join_disagreement', block 'merge': variable 'x' is used before initialization
    |
 36 |   merge:
 37 |     y = copy x;
    |     ^^^^^^^^^^
 38 |     return
    |
error: at 54:5: [INIT-UseAfterMove] In function 'move_one_branch_read_at_merge', block 'merge': variable 'x' is used after move
    |
 53 |   merge:
 54 |     call use_num(copy x);
    |     ^^^^^^^^^^^^^^^^^^^^
 55 |     return
    |
error: at 69:5: [INIT-UseBeforeInit] In function 'loop_body_reads_before_writing', block 'body': variable 'x' is used before initialization
    |
 68 |   body:
 69 |     y = copy x;
    |     ^^^^^^^^^^
 70 |     x = 1;
    |
